Add paper run